--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
             <p>June 2020 - May 2022 </p>
             <p style="color:rgb(79, 188, 238) ;">Central Polytechnic college - tharamani</p>
             <p> June 2023 - May 2025 </p>
+            <h3 style="color: rgb(115, 235, 145);">
+                Experience
+            </h3>
             <p style="color:rgb(79, 188, 238) ;">DCKAP, Anna Nagar, Chennai</p>
             <p>Software Development Trainee - Duration: Aug 01, 2025 to Present</p>
 
